--- a/scss/prices.scss
+++ b/scss/prices.scss
@@ -1,4 +1,115 @@
 /*----------------------------------prices-------------------------------*/
 @use 'mixins' as *;
+.prices {
+    &__content {
+       p {
+        margin-bottom: 40px;
+       }
+    }
+    &__table {
+        width: 100%;
+        overflow-x: auto;
+        overflow-y: hidden; 
+        scrollbar-width: none; 
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        margin-bottom: 40px;
+    }
+    &__info {
+        background-color: #BAECE9;
+        padding: 30px;
+        border-radius: var(--border-radius-small);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        position: relative;
+        overflow: hidden;
+        &_block {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            flex-basis: 200px;
+            img {
+                width: 30px;
+                height: 30px;
+            }
+        }
+        p {
+            margin-bottom: 0px;
+            flex-basis: 900px;
+            position: relative;
+            z-index: 2;
+            a {
+                display: inline;
+            }
+        }
+        &_img {
+            &:first-child {
+                position: absolute;
+                left: 0;
+                top: 0;
+                @include mobile {
 
+                }
+            }
+            &:last-child {
+                position: absolute;
+                right: 0;
+                @include mobile {
+                    right: -150px;
+                    transform: rotate(-30deg);
+                }
+            }
+        }
+        @include table {
+            padding: 20px;
+        }
+        @include mobile {
+            flex-wrap: wrap;
+            justify-content: start;
+        }
+    }
+}
+.table {
+    border-collapse: collapse;
+    width: 100%;
+    @include mobile {
+        width: 480px;
+        border-collapse: separate;
+    }
+}
+.table th, .table td {
+  padding: 40px 0px 40px 40px;
+  @include mobile {
+      padding: 40px 0px 40px 20px;
+  }
+}
+.table thead th:first-child {
+  border-top-left-radius: var(--border-radius-small);
+  border-bottom-left-radius: var(--border-radius-small);
+}
+.table thead th:last-child {
+  border-top-right-radius: var(--border-radius-small);
+  border-bottom-right-radius: var(--border-radius-small);
+}
+.table thead th {
+  background-color: #F8F8F8;
+  text-align: left;
+  font-weight: bold;
+}
+.table tbody td {
+  text-align: left;
+  border-bottom: 1px solid #EEEEEE;
+  &:nth-child(2) {
+      font-weight: 700;
+  }
+  &:last-child {
+      .button {
+          max-width: 200px;
+          margin-left: auto;
+      }
+  }
+}
 /*----------------------------------prices--------------------------------*/
