--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,10 @@
 @use 'menu';
 @use 'burger';
 @use 'breadcrumbs';
+@use 'main-section';
+@use 'navigation';
+@use 'types';
+@use 'expertise';
 @use 'pagination';
 @use 'about';
 @use 'filtermenu';
@@ -20,6 +24,9 @@
 @use 'reviews';
 @use 'tabs';
 @use 'advantages';
+@use 'theory';
 @use 'prices';
+@use 'form';
+@use 'stages';
 @use 'footer';
 
