--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,12 +4,14 @@
     --color-gray: #585858;
     --color-white: #FFFFFF;
     --color-primary: #2291FF;
-    --color-primary-hover: #E2F5F6;
+    --color-primary-hover: #adcff1;
     --color-secondary: #47ADF7;
     --border-radius: 60px;
+    --border-radius-medium: 40px;
     --border-radius-small: 20px;
-    --font-family-base: 'Montserrat', Arial, sans-serif;
-    --font-family-m: 'Unbounded', Arial, sans-serif;
-    --container-width: 1440px;
+    --font-base: 'Montserrat', Arial, sans-serif;
+    --font-unbounded: 'Unbounded', Arial, sans-serif;
+    --container-width: 1450px;
+    --box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.1);
 }
 /*----------------------------------Переменные--------------------------------*/
