--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,30 +1,44 @@
 @charset "UTF-8";
 /*----------------------------------Шрифты--------------------------------*/
 @font-face {
-  font-family: "Heliosext";
-  src: url("../fonts/heliosext_regular.woff2") format(woff2);
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.woff2") format(woff2);
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Heliosext";
-  src: url("../fonts/heliosext_bold.woff2") format(woff2);
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Mulish";
-  src: url("../fonts/Mulish-Medium.woff2") format(woff2);
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Medium.woff2") format(woff2);
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Mulish";
-  src: url("../fonts/Mulish-SemiBold.woff2") format(woff2);
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Bold.woff2") format(woff2);
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-SemiBold.woff2") format(woff2);
   font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Unbounded";
+  src: url("../fonts/Unbounded-Regular.woff2") format(woff2);
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Unbounded";
+  src: url("../fonts/Unbounded-Bold.woff2") format(woff2);
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
