--- a/css/search.css
+++ b/css/search.css
@@ -1,77 +1,24 @@
 /*----------------------------------search--------------------------------*/
 .search {
   position: relative;
-  margin-right: 460px;
-}
-@media (max-width: 992px) {
-  .search {
-    margin-right: 0px;
-  }
-}
-.search__btn {
-  background-color: inherit;
-  cursor: pointer;
-  border: 2px solid var(--color-black-text);
-  padding: 10px;
-  border-radius: 50%;
-}
-@media (max-width: 768px) {
-  .search__btn {
-    border: none;
-    padding: 0px;
-  }
-}
-.search__btn._act {
-  opacity: 0;
-}
-.search__box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
 }
 .search__label_input {
   background-color: inherit;
 }
-.search__label_close {
-  cursor: pointer;
-}
-.search__window {
-  position: absolute;
-  left: -250px;
-  top: -2px;
-  background-color: var(--color-white);
-  padding: 12px 24px;
-  border-radius: var(--border-radius-small);
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.5s;
-  transform: translateX(100%);
-  z-index: 999;
-  border: 1px solid #D6D6D6;
-  width: 320px;
-}
-@media (max-width: 768px) {
-  .search__window {
-    top: -15px;
-    width: 290px;
-  }
+.search__label_input::placeholder {
+  color: var(--color-black);
 }
 .search__label {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 10px;
-  color: var(--color-blue);
-  font-size: 15px;
+  font-size: 16px;
 }
-.search__window._act {
-  opacity: 1;
-  visibility: visible;
-  transform: translateX(0);
-}
-.search__window--active {
-  border-color: var(--color-primary);
+@media (max-width: 992px) {
+  .search {
+    display: none;
+  }
 }
 
 /*----------------------------------search--------------------------------*/
