--- a/css/variables.css
+++ b/css/variables.css
@@ -1,22 +1,19 @@
 @charset "UTF-8";
 /*----------------------------------Переменные--------------------------------*/
 :root {
-  --color-black: #000000;
-  --color-black-text: #1B1B26;
+  --color-black: #313131;
+  --color-gray: #585858;
   --color-white: #FFFFFF;
-  --color-primary: #00A7AA;
-  --color-primary-hover: #E2F5F6;
-  --color-primary-disabled: #80D3D5;
-  --color-secondary: #F85077;
-  --color-secondary-hover: #FFEEF2;
-  --color-secondary-disabled: #FE8EA8;
-  --color-bg: #F0F5F6;
-  --border: 1px solid var(--color-primary);
+  --color-primary: #2291FF;
+  --color-primary-hover: #adcff1;
+  --color-secondary: #47ADF7;
   --border-radius: 60px;
-  --border-radius-small: 40px;
-  --font-family-base: "Heliosext", Arial, sans-serif;
-  --font-family-m: "Mulish", Arial, sans-serif;
-  --container-width: 1332px;
+  --border-radius-medium: 40px;
+  --border-radius-small: 20px;
+  --font-base: "Montserrat", Arial, sans-serif;
+  --font-unbounded: "Unbounded", Arial, sans-serif;
+  --container-width: 1450px;
+  --box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
 /*----------------------------------Переменные--------------------------------*/
