--- a/scss/breadcrumbs.scss
+++ b/scss/breadcrumbs.scss
@@ -1,29 +1,44 @@
 /*----------------------------------breadcrumbs--------------------------------*/
 @use 'mixins' as *;
 .breadcrumbs {
-    margin-top: 150px;
+    padding: 60px 0px 60px;
+    position: relative;
+    z-index: 2;
     @include table {
-        margin-top: 90px;
+        padding: 60px 0px 0px;
+    }
+    @include mobile {
+        margin-bottom: 40px;
     }
     &__list {
         display: flex;
         align-items: center;
-        gap: 5px 10px;
+        gap: 5px 15px;
         flex-wrap: wrap;
+        @include mobile {
+            justify-content: center;
+        }
     }
     &__item:not(:last-child){
         position: relative;
-        padding-right: 10px;
+        padding-right: 15px;
     }
-    &__item:not(:last-child)::after {
+    &__item:not(:last-child)::after,
+    &__item:not(:last-child)::before {
         position: absolute;
-        content: '/';
-        width: 1px;
-        height: 15px;
-        top: 0;
+        content: '';
+        width: 2px;
+        height: 8px;
+        top: 8px;
         right: 0;
         border-radius: 1px;
-        transform: rotate(15deg);
+        background-color: var(--color-white);
+        transform: rotate(45deg);
+    }
+    &__item:not(:last-child)::after {
+        top: 3px;
+        right: 0;
+        transform: rotate(-45deg);
     }
     &__item {
         font-weight: 600;
