--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -4,14 +4,23 @@ body.lock {
     overflow: hidden;
 }
 html {
-    scroll-padding-top: 100px;
+    scroll-padding-top: 150px;
 }
 body { 
-    font-family: var(--font-family-base); 
-    @include fluid-text(14, 17);
-    font-weight: 700; 
-    color: var(--color-black-text); 
+    font-family: var(--font-base); 
+    @include fluid-text(14, 18);
+    font-weight: 400; 
+    color: var(--color-black); 
     background: var(--color-white);
+    line-height: 120%;
+}
+h2 {
+    font-family: var(--font-unbounded);
+    font-weight: 700;
+    @include fluid-text(24, 40);
+    text-align: center;
+    line-height: 140%;
+    margin-bottom: 40px;
 }
 .wrapper {
     display: flex;
@@ -25,16 +34,13 @@ body {
 ._container {
     max-width: var(--container-width);
     margin: 0 auto;
-    padding: 0px 16px;
+    padding: 0px 20px;
 }
 section {
-    padding: 50px 0px;
+    padding: 60px 0px;
     @include mobile {
         padding: 30px 0px;
     }
-}
-.section-color {
-    background-color: var(--color-bg);
 }
 ._ibg {
     position: relative;
@@ -48,8 +54,8 @@ section {
     }
 }
 .title {
-    @include fluid-text(26, 40);
-    line-height: 130%;
+    @include fluid-text(26, 44);
+    line-height: 140%;
     color: var(--color-black);
     margin-bottom: 32px;
     &--mod {
@@ -58,8 +64,8 @@ section {
     }
 }
 .subtitle {
-    @include fluid-text(18, 32);
-    line-height: 100%;
+    @include fluid-text(24, 40);
+    line-height: 140%;
     color: var(--color-white);
 }
 .text {
@@ -72,52 +78,23 @@ section {
     align-items: center;
     justify-content: center;
     gap: 7px;
-    padding: 11px 24px;
-    border-radius: 16px;
+    padding: 18px 24px;
+    border-radius: 12px;
     cursor: pointer;
     transition: all 0.3s;
     width: 100%;
     text-align: center;
-    @include fluid-text(12, 13);
     white-space: nowrap;
-}
-.button-outline {
-    border: 1px solid var(--color-primary);
-    background-color: var(--color-white);
-    border-radius: var(--border-radius-small);
-    color: var(--color-primary);
-    transition: all 0.3s;
-    svg {
-        transition: all 0.3s;
-    }
-    @include hover {
-        background-color: var(--color-primary-hover);
-        svg {
-            transform: translateX(5px);
-            transition: all 0.3s;
-        }
-    }
-    &:active {
-        border: 1px solid var(--color-primary-hover);
-        color: var(--color-primary-disabled);
-        svg {
-            transition: all 0.3s;
-            opacity: 0.5;
-        }
-    }
-    @include mobile {
-        justify-content: center;
-    }
-}
-.button-filled-primary {
     background-color: var(--color-primary);
     color: var(--color-white);
     transition: all 0.3s;
+    border: 1px solid var(--color-primary);
+    font-weight: 500;
     svg {
         transition: all 0.3s;
     }
     @include hover {
-        background-color: var(--color-primary-hover);
+        background-color: var(--color-white);
         color: var(--color-primary);
         svg {
             transform: translateX(5px);
@@ -128,314 +105,105 @@ section {
             transition: all 0.3s;
         }
     }
-    &:active {
-        background-color: var(--color-primary-disabled);
-        color: var(--color-white);
-        transition: all 0.3s;
-        svg path {
-            stroke: var(--color-white);
-            transition: all 0.3s;
-        }
-    }
-}
-.button-filled-secondary {
-    background-color: var(--color-secondary);
-    color: var(--color-white);
-    transition: all 0.3s;
-    @include hover {
-        background-color: var(--color-secondary-hover);
-        color: var(--color-secondary);
-        transition: all 0.3s;
-    }
-    &:active {
-        background-color: var(--color-secondary-disabled);
-        color: var(--color-white);
-        transition: all 0.3s;
-    }
-}
-.button-white {
-    background-color: var(--color-white);
-    color: var(--color-black-text);
-    border: 1px solid var(--color-white);
-    transition: all 0.3s;
-    svg {
-        transition: all 0.3s;
-    }
-    @include hover {
-        color: var(--color-white);
-        background-color: rgba(255, 255, 255, 0.1);
-        svg {
-            transform: translateX(5px);
-            transition: all 0.3s;
-        }
-        svg path {
-            transition: all 0.3s;
-        }
-        svg path {
-            stroke: var(--color-white);
-            transition: all 0.3s;
-        }
-    }
-    &:active {
-        background-color: rgba(255, 255, 255, 0.5);
-        color: var(--color-primary);
-        transition: all 0.3s;
-        svg path {
-            stroke: var(--color-primary);
-            transition: all 0.3s;
-        }
-    }
-}
-.right__button {
-    display: inline-grid;
-    justify-content: end;
-    width: 100%;
     @include mobile {
-        display: flex;
-    }
-}
-.button-more {
-    background-color: inherit;
-    color: var(--color-primary);
-    font-weight: 700;
-    &.view {
-        display: none;
-    }
-}
-.content-more {
-    display: none;
-    &.view {
-        display: block;
-    }
-}
-.video {
-    height: 100%;
-    width: 100%;
-    p {
-        font-weight: 600;
-        font-family: var(--font-family-m);
-        line-height: 141%;
         padding: 16px;
-        a {
-            color: var(--color-primary);
-            display: inline-block;
-            position: relative;
-            &::after {
-                position: absolute;
-                content: '';
-                width: 100%;
-                height: 1px;
-                left: 0;
-                bottom: 0;
-                transition: transform 0.3s ease;
-                transform: scaleX(0);
-                background: var(--color-primary);
-            }
-            @include hover {
-                &::after {
-                    transform: scaleX(1);
-                }
-            }
-        }
-    }
-    &__link {
-        position: relative;
-        display: inline-block;
-        &_play {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            border: 1px solid var(--color-white);
-            padding: 20px 22px;
-        }
-        img {
-            width: 100%;
-            border-radius: 24px;
-        }
     }
 }
-.arrow__pulse {
-    position: absolute;
-    top: 25px;
-    right: 35px;
-    border: 3px solid var(--color-primary);
-    width: 44px;
-    height: 44px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    opacity: 0;
-    transition: all 0.5s;
-    &::after {
-       position: absolute;
-       content: '';
-       width: 64px;
-       height: 64px;
-       top: 50%;
-       left: 50%;
-       transform: translate(-50%, -50%);
-       background-color: inherit;
-       border: 1px solid var(--color-primary);
-       border-radius: 50%;
-       opacity: 0;
-       @include mobile {
-         opacity: 1;
-      }
-    }
-    @keyframes pulse {
-        0% {
-         transform: translate(-50%, -50%) scale(0.5);
-         opacity: 0;
-        }
-        50% {
-            opacity: 1;
-            transform: translate(-50%, -50%) scale(1.1);
-        }
-        100% {
-         transform: translate(-50%, -50%) scale(0.5);
-         opacity: 0;
-        }
-    }
-    @include mobile {
-       opacity: 1;
-    }
-}
-.block-row {
-    background: linear-gradient(129deg, #f85077 0%, #af47d1 100%);
-    padding: 38px 54px;
-    border-radius: var(--border-radius-small);
+.messengers {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 10px;
-    @include table {
-        flex-wrap: wrap;
-        padding: 32px 16px;
-        border-radius: 32px;
-    }
-    &__item {
+    a {
+        border-radius: 10px;
+        padding: 10px;
+        border: 1px solid var(--color-white);
+        transition: all 0.3s;
         &:first-child {
-            flex-basis: 525px;
+            background-color: #80ABFF;
+            transition: all 0.3s;
         }
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 24px;
-        color: var(--color-white);
-        img {
-            border-radius: 50%;
-            background: linear-gradient(45deg, #c3f0f3 32.68%, #a9d9e6 100%);
-            border: 1px solid var(--color-white);
+        &:last-child {
+            background-color: #39E8DE;
+            transition: all 0.3s;
         }
-        &_col {
-            span {
-                margin-bottom: 10px;
-                display: block;
-                @include fluid-text(12, 17);
-            }
-            p {
-                font-family: var(--font-family-m);
-            }
-        }
-        @include mobile {
-            gap: 10px;
-        }
-    }
-    &__button {
-        @include mobile {
-            width: 100%;
-        }
-    }
-    &--mod {
-        margin-bottom: 64px;
-        background: linear-gradient(90deg, #56db98 0%, #63caa3 100%);
-        padding: 10px 60px;
-        .block-row__item {
-            justify-content: start;
+        @include hover {
+            background-color: var(--color-white);
             &:first-child {
-                img {
-                    background: inherit;
-                    border: none;
-                    border-radius: 0;
+                border: 1px solid #80ABFF;
+                svg path {
+                    fill: #80ABFF;
+                }
+            }
+            &:last-child {
+                border: 1px solid #39E8DE;
+                svg path {
+                    fill: #39E8DE;
                 }
             }
         }
-        @include table {
-            padding: 20px;
-        }
     }
-}
-.block {
-    position: relative;
-    img {
-        border-radius: 24px;
+    @include mobile {
+        justify-content: center;
         width: 100%;
     }
-    span {
-        position: absolute;
-        left: 16px;
-        bottom: 16px;
-        font-weight: 400;
-        font-size: 13px;
-        line-height: 138%;
-        box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
-        background-color: var(--color-white);
-        padding: 13px 4px 13px 24px;
-        border-radius: var(--border-radius-small);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 0px;
-        transition: all 0.3s ease-in-out; 
-        margin-right: 16px;
-        svg {
-            opacity: 0;
-            transform: translateX(-20px); 
-            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, margin-left 0.3s ease-in-out; /* Плавное появление и движение */
+}
+.block-images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    &__img {
+        img {
+            width: 100%;
+            height: 100%;
+            border-radius: var(--border-radius-small);
         }
-        @include mobile {
-            padding: 6px 16px;
-            display: inline;
-            border-radius: 16px;
+        &:first-child {
+            grid-row: 1 / 3;
         }
     }
-    @include hover {
-        color: var(--color-primary);
-        span {
-            gap: 20px; 
-            padding: 13px 20px 13px 24px;
-        }
-        svg {
-            opacity: 1;
-            transform: translateX(0);
-            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-        }
+    @include table {
+        gap: 20px;
     }
 }
-.footnote {
-    margin-left: 40px;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 138%;
-    color: var(--color-black);
-    @include mobile {
-        margin-left: 0px;
+.list-mark {
+    ul {
+        li {
+            margin-bottom: 12px;
+            padding-left: 40px;
+            position: relative;
+            &::before,
+            &::after {
+                position: absolute;
+                content: '';
+                width: 2px;
+                height: 10px;
+                top: 5px;
+                left: 20px;
+                background-color: var(--color-primary);
+                transform: rotate(45deg);
+            }
+            &::before {
+                width: 2px;
+                height: 6px;
+                top: 8px;
+                left: 15px;
+                transform: rotate(-45deg);
+            }
+        }
+        margin-bottom: 40px;
+    }
+}
+.list-number {
+    ol {
+        margin-left: 20px;
+        li {
+            margin-bottom: 12px;
+            &::marker {
+                color: var(--color-primary);
+                font-weight: 600;
+            }
+        }
     }
 }
 /*----------------------------------global--------------------------------*/
-
-
-.list-links {
-    padding-top: 50px;
-    .menu__link {
-        text-decoration: none;
-        color: var(--color-black);
-        display: block;
-        margin-bottom: 10px;
-        text-align: center;
-    }
-}
