--- a/scss/header.scss
+++ b/scss/header.scss
@@ -17,7 +17,7 @@
         justify-content: space-between;
         align-items: center;
         gap: 16px;
-        padding: 10px 0px;
+        padding: 20px 0px;
         margin-bottom: 15px;
         @include table {
             margin-bottom: 0px;
@@ -25,26 +25,25 @@
     }
     &__logo {
         z-index: 3; 
-        @include mobile {
-            max-width: 130px;
+        max-width: 250px;
+        font-size: 12px;
+        img {
+            border-radius: 10px;
+            margin-right: 15px;
+            @include mobile {
+                width: 80px;
+                margin-right: 5px;
+            }
         }
-    }
-    &__links {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 5px 60px;
-        @include fluid-text(12, 16);
     }
     &__link {
         display: flex;
         justify-content: space-between;
         align-items: center;
         gap: 6px;
-        font-weight: 400;
-        border-radius: 100px;
-        padding: 8px 24px;
-        background-color: var( --color-primary-hover);
+        font-weight: 700;
+        border-radius: 10px;
+        padding: 8px;
         white-space: nowrap;
         transition: All 0.3s;
         svg path {
@@ -59,31 +58,32 @@
                 fill: var(--color-white);
             }
         }
-        @include mobile {
-            background-color: inherit;
-            padding: 0px;
-            span {
-                display: none;
-            }
-        }
-    }
-    &__block {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 10px;
     }
     &__buttons {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 16px;
+        gap: 8px 16px;
         position: absolute;
         top: 22px;
         right: 10px;
         @include table {
             position: static;
             flex-wrap: wrap;
+            justify-content: center;
+        }
+    }
+    &__bottom {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        padding: 20px 0px;
+        border-top: 1px solid #D7DEE8;
+        border-bottom: 1px solid #D7DEE8;
+        @include table {
+            border: none;
+            padding: 0px;
         }
     }
 }
